<resources>
    <string name="app_name">SAMAKAKI</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_family">Family</string>
    <string name="title_chat">Chat</string>
    <string name="title_profile">Profile</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="dummy_username">Yunanda Anggraini</string>
    <string name="dummy_family_name"><font size="16">Keluarga Situmorang</font></string>
    <string name="add_post">Ketikan sesuatu...</string>
    <string name="foto_or_video">Media</string>
    <string name="music">Musik</string>
    <string name="post">Posting</string>
    <string name="dummy_text_post">Ayokk kapan kita kumpul</string>
    <string name="search_user"><font size="14">Search username...</font></string>
    <string name="title_search">Search</string>
    <string name="regard_as">Kamu menganggap dia sebagai</string>
    <string name="empty_notification">Belum ada notifikasi</string>
    <string name="empty_post">Belum ada postingan</string>
    //splashscreen
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="samakaki_splash">SAMAKAKI</string>
    <string name="welcome_splash">Welcome</string>
    <string name="get_started_splash">Get Started</string>
    <string name="title_notification">Notification</string>
    <string name="personal">Personal</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="title_settings">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="change_password">Ubah Password</string>
    <string name="verifikasi_email">Verifikasi Email</string>
    <string name="isi_profil">Isi Profil</string>
    <string name="masukkan_foto">Masukkan Foto</string>
    <string name="silahkan_melakukan_verifikasi_akun">Silahkan Melakukan Verifikasi Akun</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="minta_kode_lagi">Minta kode lagi</string>
    <string name="tidak_menerima_kode">Tidak menerima kode?</string>
    <string name="kode_verifikasi_telah_di_kirim_ke_email_kamu">Kode Verifikasi telah di kirim ke email kamu</string>
    <string name="alamat">Alamat</string>
    <string name="tentang">Tentang</string>
    <string name="title_email_confirmation">Akun anda belum terverifikasi. Silahkan verifikasi email terlebih dahulu</string>
    <string name="title_registration_success">Berhasil mendaftarkan akun! \n Silahkan cek email anda untuk verifikasi</string>
    <string name="title_resend_email_success">Berhasil mengirimkan kembali email konfirmasi! \n Silahkan cek email anda untuk verifikasi</string>
    <string name="verif_email">Verifikasi Email</string>
    <string name="isi_profil_kamu">ISI PROFIL KAMU!!</string>
    <string name="status_nikah">Status Nikah</string>
    <string name="cek_email">Cek Email</string>
    <string name="privasi">Privasi</string>
    <string name="data_keluarga_kamu">DATA KELUARGA KAMU</string>
    <string name="nama_keluarga">Nama Keluarga</string>
    <string name="anggota_keluarga">Anggota Keluarga</string>
    <string name="nomor_telephone">Nomor Telepon</string>
    <string name="hubungan">Status Hubungan</string>
    <string name="title_relation">Status Hubungan sebagai</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="dummy_relation">Bapak</string>
    <string name="welcome">Welcome</string>
    <string name="silahkan_melakukan_login">Silahkan melakukan Login</string>
    <string name="email_kamu">Email kamu</string>
    <string name="forgot_password_2">Forgot password?</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun">Belum Punya Akun?</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="tambah_anggota">Tambah Anggota</string>
    <string name="keluarga">Keluarga</string>
    <string name="status">Status</string>
    <string name="simpan">Simpan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="samakaki">SAMAKAKI</string>
    <string name="selamat_datang_di">Selamat Datang di</string>
    <string name="silahkan_isi_profile_kamu_terlebih_dahulu">Silahkan isi profile kamu terlebih dahulu</string>
    <string name="selamat_datang_di_samakaki">Selamat Datang di SAMAKAKI</string>
    <string name="background">background</string>
    <string name="reset_password">Reset Password</string>
    <string name="save">Simpan</string>
    <string name="dotdotdot">...</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="photo_profile">Foto Profil</string>
    <string name="edit">Edit</string>
    <string name="bio">Bio</string>
    <string name="nama">Nama</string>
    <string name="nama_kamu">Nama</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="no_telepon_kamu">No Telepon kamu</string>
    <string name="lokasi_kamu">Lokasi kamu</string>
    <string name="lokasi">Lokasi</string>
    <string name="status_pernikahan">Status Pernikahan</string>
    <string name="status_kamu">Status kamu</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="tanggal_lahir_kamu">Tanggal lahir kamu</string>
    <string name="tanggal_acara">Tanggal acara</string>
    <string name="tambah_acara">Tambahkan Acara</string>
    <string name="edit_acara">Edit Acara</string>
    <string name="nama_acara">Nama acara</string>
    <string name="tambahkan_tanggal">Tambahkan Tanggal</string>
    <string name="waktu_acara">Waktu acara</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="tambah">Tambah</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="failed_camera">Failed To Bring Up The Camera</string>
    <string name="er_empty_email">Masukkan email</string>
    <string name="err_empty_name">Masukkan nama</string>
    <string name="err_empty_phone">Masukkan nomor telepon</string>
    <string name="err_empty_relation">Pilih relasi hubungan</string>
    <string name="err_empty_password">Masukkan password</string>
    <string name="err_empty_confirmPassword">Masukkan konfirmasi</string>
    <string name="err_empty_token">Masukkan token</string>
    <string name="err_password_did_not_match">Password tidak cocok</string>
    <string name="err_wrong_email_format">Format email salah</string>
    <string name="edit_photo">Ubah Foto</string>
    <string name="ganti_password">Ganti Password</string>
    <string name="password_baru">Password Baru</string>
    <string name="token">Token</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="undang">Undang</string>
    <string name="err_empty_family_name">Masukkan nama keluarga</string>
    <string name="err_empty_family_member">Masukkan nama anggota keluarga yang ingin anda undang</string>
    <string name="share_link">Bagikan link undangan</string>
    <string name="link">Link</string>
    <string name="share_link_on">Bagikan link</string>
    <string name="copy">Copy</string>
    <string name="err_empty_status">Masukkan status hubungan anda</string>
    <string name="err_empty_dob">Isi tanggal kelahiran kamu</string>

    <string-array name="status">
        <item>single</item>
        <item>married</item>
        <item>divorced</item>
    </string-array>

    <string-array name="privacy">
        <item>private</item>
        <item>protected</item>
        <item>public</item>
    </string-array>

    <string-array name="relationship">
        <item>Adek Pertama</item>
        <item>Adek Kedua</item>
        <item>Adek Ketiga</item>
        <item>Kakak Pertama</item>
        <item>Kakak Kedua</item>
        <item>Kakak Ketiga</item>
        <item>Bapak</item>
        <item>Ibu</item>
        <item>Suami</item>
        <item>Istri</item>
        <item>Anak Pertama</item>
        <item>Anak Kedua</item>
        <item>Anak Ketiga</item>
        <item>Kakek Dari Bapak</item>
        <item>Nenek Dari Bapak</item>
        <item>Kakek Dari Ibu</item>
        <item>Nenek Dari Ibu</item>
    </string-array>

    <string-array name="relation">
        <item>adek_pertama</item>
        <item>adek_kedua</item>
        <item>adek_ketiga</item>
        <item>kakak_pertama</item>
        <item>kakak_kedua</item>
        <item>kakak_ketiga</item>
        <item>bapak</item>
        <item>ibu</item>
        <item>husband</item>
        <item>wife</item>
        <item>anak_pertama</item>
        <item>anak_kedua</item>
        <item>anak_ketiga</item>
        <item>kakek_dari_bapak</item>
        <item>nenek_dari_bapak</item>
        <item>kakek_dari_ibu</item>
        <item>nenek_dari_ibu</item>
    </string-array>

</resources>