<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="27dp"
        android:layout_marginStart="35dp"
        android:textSize="22sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginStart="35dp"
        android:text="@string/nama"/>
    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="16dp"
        android:background="@color/cardview_dark_background"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="35dp"
        android:text="@string/email"/>
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="16dp"
        android:background="@color/cardview_dark_background"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="35dp"
        android:text="@string/nomor_telepon"/>
    <EditText
        android:id="@+id/et_no_telp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="16dp"
        android:background="@color/cardview_dark_background"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="35dp"
        android:text="@string/password"/>
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        android:background="@color/cardview_dark_background"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="35dp"
        android:text="@string/confirm_password"/>
    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        android:background="@color/cardview_dark_background"/>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/register"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="60dp"/>
</LinearLayout>