<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.authentication.LoginActivity"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <TextView
                style="@style/medium_18black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="16dp"
                android:text="@string/welcome" />

            <TextView
                style="@style/regular_14black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:text="@string/silahkan_melakukan_login" />

            <ImageView
                android:id="@+id/iv_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/image_login" />

            <TextView
                style="@style/regular_14black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="16dp"
                android:text="@string/email" />

            <EditText
                android:id="@+id/et_email"
                style="@style/TextfieldsStyle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="35dp"
                android:inputType="textEmailAddress" />

            <TextView
                style="@style/regular_14black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="16dp"
                android:text="@string/password" />

            <EditText
                android:id="@+id/et_password"
                style="@style/TextfieldsStyle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="35dp"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/tv_forgot_password"
                style="@style/regular_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="20dp"
                android:text="@string/forgot_password_2"
                android:textColor="@color/primary_600" />

            <Button
                android:id="@+id/btn_login"
                style="@style/ButtonStyle"
                android:layout_width="@dimen/dimen_161"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/primary_500"
                android:text="@string/login"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="@dimen/dimen_16"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/belum_punya_akun" />

                <TextView
                    android:id="@+id/txtView_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="@string/register"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/prgbar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>