<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tambah_acara_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_13"
        android:layout_marginTop="@dimen/dimen_8"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        style="@style/semibold_18prim500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_12"
        android:text="@string/tambah_acara"
        app:layout_constraintBottom_toBottomOf="@+id/btn_back"
        app:layout_constraintStart_toEndOf="@+id/btn_back"
        app:layout_constraintTop_toTopOf="@+id/btn_back" />

    <ImageView
        android:id="@+id/img_ilustrasi_acara"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:src="@drawable/ic_bg_ilustrasi_acara"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3"/>

    <EditText
        android:id="@+id/et_nama_acara"
        style="@style/TextfieldsStyle2"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/nama_acara"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_ilustrasi_acara" />

    <EditText
        android:id="@+id/et_tambah_tanggal"
        style="@style/TextfieldsStyle2"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawableRight="@drawable/ic_calender_soft"
        android:paddingRight="8dp"
        android:hint="@string/tambahkan_tanggal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_nama_acara" />

    <EditText
        android:id="@+id/et_waktu_acara"
        style="@style/TextfieldsStyle2"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawableRight="@drawable/ic_alarm"
        android:paddingRight="8dp"
        android:focusable="false"
        android:hint="@string/waktu_acara"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_tambah_tanggal" />

    <EditText
        android:id="@+id/et_lokasi"
        style="@style/TextfieldsStyle2"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/lokasi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_waktu_acara" />

    <EditText
        android:id="@+id/et_deskripsi"
        style="@style/TextfieldsStyle2"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/deskripsi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_lokasi" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        style="@style/ButtonStyle4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dimen_40"
        android:backgroundTint="@color/primary_600"
        android:text="@string/tambah"
        app:cornerRadius="@dimen/dimen_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_deskripsi" />


    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/prgbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>